[gd_scene load_steps=3 format=3 uid="uid://cpupp4n0sb7db"]

[ext_resource type="Script" uid="uid://8xsoplalqhxa" path="res://addons/parley/components/next_dialogue_button.gd" id="1_fh8t8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6xkfq"]
resource_local_to_scene = true
bg_color = Color(0.619608, 0.619608, 0.619608, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.196078, 0.196078, 0.196078, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="NextDialogueButton" type="PanelContainer"]
custom_minimum_size = Vector2(100, 0)
offset_right = 1.0
size_flags_horizontal = 4
focus_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6xkfq")
script = ExtResource("1_fh8t8")

[node name="NextDialogueMarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="NextDialogueLabel" type="RichTextLabel" parent="NextDialogueMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 2
mouse_filter = 1
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "..."
fit_content = true
scroll_active = false

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
